syntax = "proto3";

package NAlice.NScenarios;

option go_package = "a.yandex-team.ru/alice/megamind/protos/scenarios";
option java_package = "ru.yandex.alice.megamind.protos.scenarios";
option java_outer_classname = "CombinatorRequestProto";

import "alice/megamind/protos/common/location.proto";
import "alice/megamind/protos/scenarios/request.proto";
import "alice/megamind/protos/scenarios/response.proto";
import "alice/protos/data/language/language.proto";

import "alice/library/client/protos/client_info.proto";

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "mapreduce/yt/interface/protos/extension.proto";

message TCombinatorRequest {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TBaseRequest {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        // necessary fields from TScenarioBaseRequest
        string RequestId = 1 [json_name = "request_id", (NYT.column_name) = "request_id"];
        string DialogId = 2 [json_name = "dialog_id", (NYT.column_name) = "dialog_id"];
        uint64 RandomSeed = 3 [json_name = "random_seed", (NYT.column_name) = "random_seed"];
        TClientInfoProto ClientInfo = 4 [json_name = "client_info", (NYT.column_name) = "client_info"];
        TLocation Location = 5 [json_name = "location", (NYT.column_name) = "location"];
        TInterfaces Interfaces = 6 [json_name = "interfaces", (NYT.column_name) = "interfaces"];
        google.protobuf.Struct Experiments = 7 [json_name = "experiments", (NYT.column_name) = "experiments"];
        TOptions Options = 8 [json_name = "options", (NYT.column_name) = "options"];
        TUserPreferences UserPreferences = 9 [json_name = "user_preferences", (NYT.column_name) = "user_preferences"];
        ELang UserLanguage = 10 [json_name = "user_language", (NYT.column_name) = "user_language"];
        TUserClassification UserClassification = 11 [json_name = "user_classification", (NYT.column_name) = "user_classification"];
        TMementoData Memento = 12 [json_name = "memento", (NYT.column_name) = "memento"];
        uint64 ServerTimeMs = 13 [json_name = "server_time_ms"];
    }

    TBaseRequest BaseRequest = 1 [json_name = "base_request", (NYT.column_name) = "base_request"];
    map<string, TScenarioRunResponse> ScenarioResponses = 2 [json_name = "scenario_responses", (NYT.column_name) = "scenario_responses"];
    map<int32, TDataSource> DataSources = 3 [json_name = "data_sources", (NYT.column_name) = "data_sources"];
    TInput Input = 4 [json_name = "input", (NYT.column_name) = "input"];
}

message TCombinatorContinueRequest {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    google.protobuf.Any ContinueArguments = 1 [json_name = "continue_arguments"];
}
